--- a/angular.json
+++ b/angular.json
@@ -3,9 +3,13 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "Booking-Angular": {
+    "clone-airbnb": {
       "projectType": "application",
-      "schematics": {},
+      "schematics": {
+        "@schematics/angular:component": {
+          "style": "scss"
+        }
+      },
       "root": "",
       "sourceRoot": "src",
       "prefix": "app",
@@ -13,7 +17,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/Booking-Angular",
+            "outputPath": "dist/clone-airbnb",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -24,7 +28,8 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
+              "src/styles.scss"
             ],
             "scripts": []
           },
@@ -62,18 +67,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "Booking-Angular:build"
+            "browserTarget": "clone-airbnb:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "Booking-Angular:build:production"
+              "browserTarget": "clone-airbnb:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "Booking-Angular:build"
+            "browserTarget": "clone-airbnb:build"
           }
         },
         "test": {
@@ -88,7 +93,8 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
+              "src/styles.scss"
             ],
             "scripts": []
           }
@@ -110,15 +116,19 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "Booking-Angular:serve"
+            "devServerTarget": "clone-airbnb:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "Booking-Angular:serve:production"
+              "devServerTarget": "clone-airbnb:serve:production"
             }
           }
         }
       }
-    }},
-  "defaultProject": "Booking-Angular"
+    }
+  },
+  "defaultProject": "clone-airbnb",
+  "cli": {
+    "analytics": false
+  }
 }
